2011-04-04  MIYAMUKO Katsuyuki

	* (power-usage-long-status): 日付を UTC で表示していたのを修正
	http://juria.posterous.com/power-usagexyzzy

2011-03-31  MIYAMUKO Katsuyuki

	* (update-mode-line-status, power-usage-long-status): update-power-usage
	したときにメッセージ領域に最新の情報を表示するようにした

	* (list-power-usage-at): 指定した月または日の毎時の電力使用状況を返す API を追加。

	* (list-latest-power-usage): 今月の毎時の電力使用状況を返す API を追加。

	* (get-power-usage-at): 指定された日時の電力使用状況を返す API を追加。

	* (get-power-usage): get-latest-power-usage に変更した。

	* (power-usage-status): 電力消費率が Yahoo の表示と一致するように
	四捨五入を切り捨てに変更した。

	* (update-power-usage): ミニバッファから手動で更新できるように
	interactive にした。

	* capacity_peak_period に対応

2011-03-30  MIYAMUKO Katsuyuki

	* Gist に貼ったコードを整理して取り込んだ。
	https://gist.github.com/882497

	* power-usage 作成開始